# fedora-messaging-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  fedora-messaging.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  fedora-messaging.rockspec  fedora-messaging_sdk.lua  fedora-messaging_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  fedoramessaging_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  fedoramessaging_sdk.py  fedoramessaging_types.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  spec.py
py/entity/: search_entity.py
py/feature/: base_feature.py  cache_feature.py  idempotency_feature.py  log_feature.py  paging_feature.py  rbac_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_spec.py  prepare_auth.py  prepare_path.py  prepare_query.py  result_body.py
rb/: AGENTS.md  CLAUDE.md  (+7 more)
(+400 files in other folders)
